Thu Aug 04 07:57:09 GMT 2011  Olly Betts <olly@survex.com>

	* backends/dbfactory_remote.cc,docs/deprecation.rst,
	  include/xapian/dbfactory.h,include/xapian/types.h: Deprecate
	  Xapian::timeout in favour of POSIX type useconds_t.

Thu Aug 04 04:04:45 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/termgenerator.h,
	  queryparser/termgenerator_internal.cc: Rename weight parameter to
	  wdf_inc, which much better describes what it does, and avoids a
	  -Wshadow warning with GCC 4.6.

Thu Aug 04 04:03:37 GMT 2011  Olly Betts <olly@survex.com>

	* api/registry.cc: Rename weight variable to weighting_scheme to avoid
	  -Wshadow warning.

Wed Aug 03 23:13:36 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: -Wshadow gives bogus warnings with 4.0 (at least on Mac
	  OS X), so disable it for GCC < 4.1 (like the comments suggest we
	  already did!)

Wed Aug 03 22:53:55 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Enable -fshow-column for GCC - things like vim's
	  quickfix mode will then jump to the appropriate column for a
	  compiler error or warning, not just the appropriate line.

Wed Aug 03 22:13:26 GMT 2011  Olly Betts <olly@survex.com>

	* api/omdocument.cc,backends/brass/brass_database.cc,
	  backends/chert/chert_database.cc,common/document.h: Document objects
	  now track if term positions might have been modified, so we can avoid
	  having to consider them at all if you take a document and add or
	  remove a boolean filter term.  This gives an 18% speedup for adding
	  tags in notmuch.

Mon Aug 01 15:15:17 GMT 2011  Olly Betts <olly@survex.com>

	* api/Makefile.mk,api/ompostlistiterator.cc,api/postingiterator.cc,
	  include/xapian/postingiterator.h,tests/api_db.cc: Redo
	  PostingIterator based on TermIterator with efficient end iterator
	  checks.

Mon Aug 01 13:34:44 GMT 2011  Olly Betts <olly@survex.com>

	* api/,backends/brass/brass_database.cc,
	  backends/chert/chert_database.cc,